added checkout page and bottom nav bar

--- a/app/pages/product/components/card.module.css
+++ b/app/pages/product/components/card.module.css
@@ -50,6 +50,7 @@
         margin: 20px;
     }
     .section2 button{
+        margin-bottom: 90px;
         display: flex;
         align-items: center;
         justify-content: center;
