--- a/app/css/nav.module.css
+++ b/app/css/nav.module.css
@@ -40,7 +40,20 @@
     background-color: rgba(128, 128, 128, 0.37);
     margin-top: 10px;
 }
-
+.bottomNav{
+    background-color: rgb(255, 255, 255);
+    width: 100%;
+    height: 60px;
+    z-index: 998;    
+    overflow: hidden;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    display: none;
+    align-items: center;
+    justify-content: space-around;
+    font-size: 30px;
+}
 @media screen and (max-width:704px) {
     #leftNav{
         display: none;
@@ -50,6 +63,9 @@
     }
     .nav{
         grid-template-columns: 100%;
+    }
+    .bottomNav{
+        display: flex;
     }
 }
 
