--- a/app/order/style.module.css
+++ b/app/order/style.module.css
@@ -6,40 +6,86 @@
     gap: 20px;
 }
 .products{
+    max-width: 900px;
+    background-color: rgb(26, 25, 25);
     border: 1px solid rgba(0, 0, 0, 0.199);
     padding: 10px;
+    width: 100%;
+    margin: 10px;
+    padding-bottom: 20px;
+    border-radius: 22px;
 }
 .form{
-    border: 1px solid rgba(0, 0, 0, 0.199);
+    max-width: 900px;
+    /* background-color: rgb(26, 25, 25); */
+    border: 1px solid rgba(0, 0, 0, 0.082);
     padding: 10px;
     display: flex;
+    align-items: center;
+    justify-content: center;
     height: 100%;
+    width: 100%;
+    margin: 10px;
+    border-radius: 22px;
 }
 .form form{
+    width: 100%;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 .form h1{
     font-size: 20px;
     font-weight: 700;
 }
 .form input{
+    background-color: rgb(255, 255, 255);
+    border: 1px solid rgba(0, 0, 0, 0.123);
+    border-radius: 12px;
+    padding: 10px;
+    margin: 10px;
+    max-width: 600px;
+    width: 100%;
+}
+.form input:focus{
+outline: none;
+}
+.form textarea{
+    max-width: 600px;
+    width: 100%;
     border: 1px solid rgba(0, 0, 0, 0.123);
     border-radius: 12px;
     padding: 10px;
     margin: 10px;
 }
-.form textarea{
-    border: 1px solid rgba(0, 0, 0, 0.123);
-    border-radius: 12px;
-    padding: 10px;
-    margin: 10px;
+.form textarea:focus{
+    outline: none;
 }
 
 .form button{
+    width: 100%;
+    max-width: 600px;
     background-color: black;
     color: white;
     border-radius: 12px;
     font-size: 20px;
     padding: 10px;
+}
+
+.select{
+    width: 100%;
+    max-width: 600px;
+    border: 1px solid rgba(0, 0, 0, 0.123);
+    padding: 10px;
+    border-radius: 12px;
+    color: gray;
+}
+.select select{
+    width: 100%;
+    height: 40px;
+}
+
+.select select:focus{
+    outline: none;
+    border: none;
 }
