--- a/app/pages/order/style.module.css
+++ b/app/pages/order/style.module.css
@@ -4,21 +4,28 @@
     flex-wrap: wrap;
     margin-bottom: 100px;
     gap: 20px;
+    color: black;
 }
 .products{
     max-width: 900px;
-    background-color: rgb(26, 25, 25);
+    /* background-color: rgba(0, 0, 0, 0.959);
+     */
+     background-image: url("https://images.rawpixel.com/image_800/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIyLTA1L3JtMjE4YmF0Y2gxMC1taW5kLTA4LWpvYjU5OC5qcGc.jpg");
     border: 1px solid rgba(0, 0, 0, 0.199);
     padding: 10px;
     width: 100%;
     margin: 10px;
     padding-bottom: 20px;
     border-radius: 22px;
+    background-size: cover;
+    background-repeat: no-repeat;
+
 }
 .form{
     max-width: 900px;
     /* background-color: rgb(26, 25, 25); */
-    border: 1px solid rgba(0, 0, 0, 0.082);
+    background-image: url("https://images.rawpixel.com/image_800/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIyLTA1L3JtMjE4YmF0Y2gxMC1taW5kLTA4LWpvYjU5OC5qcGc.jpg");
+    border: 1px solid rgba(59, 59, 59, 0.082);
     padding: 10px;
     display: flex;
     align-items: center;
@@ -33,19 +40,24 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    backdrop-filter: blur(5px);
+    border-radius: 22px;
+    padding: 10px;
 }
 .form h1{
+
     font-size: 20px;
     font-weight: 700;
 }
 .form input{
-    background-color: rgb(255, 255, 255);
-    border: 1px solid rgba(0, 0, 0, 0.123);
+    /* background-color: rgb(34, 32, 32); */
+    /* border: 1px solid rgba(0, 0, 0, 0.123); */
     border-radius: 12px;
     padding: 10px;
     margin: 10px;
     max-width: 600px;
     width: 100%;
+    height: 60px;
 }
 .form input:focus{
 outline: none;
@@ -81,11 +93,25 @@ outline: none;
     color: gray;
 }
 .select select{
+    border-radius: 12px;
+    padding: 10px;
     width: 100%;
-    height: 40px;
+    height: 60px;
+    margin-top: 10px;
 }
 
 .select select:focus{
     outline: none;
     border: none;
+}
+
+
+.specs{
+    font-weight: 700;
+}
+
+.butt{
+display: flex;
+align-items: center;
+justify-content: center;
 }
