--- a/app/pages/signup/style.module.css
+++ b/app/pages/signup/style.module.css
@@ -1,9 +1,12 @@
 .heading{
     margin: 20px;
-    font-size: 50px;
+    font-size: 45px;
     max-width: 700px;
     font-weight: 100;
 }
+
+
+
 .button{
     margin: 10px;
     background-color: black;
@@ -15,4 +18,12 @@
     align-items: center;
     gap: 40px;
     font-size: 20px;
+}
+@media screen and (max-width:530px) {
+    .heading{
+        font-size: 30px;
+    }
+    .button{
+        font-size: 15px;
+    }
 }
