--- a/app/css/section.module.css
+++ b/app/css/section.module.css
@@ -123,3 +123,33 @@
     height: 100%;
     width: 100%;
 }
+
+
+
+/* category */
+.categoryCard {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    flex-wrap: wrap;
+  }
+  .categoryCard img {
+    height: 200px;
+    margin: 10px;
+  }
+  .categoryCard img:nth-child(1) {
+    border-radius: 102px 0px 0px 0px;
+  }
+  .categoryCard img:nth-child(3) {
+    border-radius: 0px 0px 120px 0px;
+  }
+  .categoryCard img:nth-child(4) {
+    border-radius: 120px 0px 0px 0px;
+  }
+  @media screen and (max-width: 265px) {
+    .categoryCard img {
+      height: 90px;
+    }
+  }
