--- a/app/css/cart.module.css
+++ b/app/css/cart.module.css
@@ -8,10 +8,10 @@
     width: 300px;
     max-height: 100%; /* Changed from height to max-height */
     border-left: 1px solid #ddd;
-    backdrop-filter: blur(20px);
     z-index: 999;
     display: flex;
     flex-direction: column;
+    background-color: whitesmoke;
 }
 
 .nav{
@@ -31,21 +31,22 @@
     
 }
 .checkout button{
-    background-color: #ff390c;
+    background-color: #ff4d25;
     color: white;
     width: 100%;
-    height: 100%;
+    height: 90%;
     font-size: 30px;
     font-weight: 300;
     padding: 10px;
 
 }
 .checkout span{
-    background-color: rgb(37, 28, 28);
+    background-color: rgb(233, 233, 233);
     width: 100%;
     font-size: 25px;
     padding: 5px;
-    font-weight: 300;
+    font-weight: 600;
+    color: rgb(29, 29, 29);
 }
 .products{
     overflow-x: auto;
