--- a/app/css/nav.module.css
+++ b/app/css/nav.module.css
@@ -1,81 +1,171 @@
-.nav{
-    margin: 20px;
-    display: grid;
-    grid-template-columns: 33% 33% 33%;
-    place-content: center;
-}
-
-#leftNav{
-    font-family: "Roboto", sans-serif;
+.customNavbar {
+    z-index: 999;
+    user-select: none;
+    padding-left: 30px;
+    padding-right: 30px;
     display: flex;
     align-items: center;
-    list-style: none;
-    gap: 20px;
-    font-size: 20px;
-   color: rgb(49, 48, 48);
-}
-#centerNav{
-    font-style: normal;
-    font-size: 30px;
-    display: flex;
-    justify-content: center;
-}
-#rightNav{
-    text-align: right;
-    display: flex;
-    align-items: center;
-    justify-content: right;
-    gap: 20px;
-    font-size: 30px;
-   color: rgb(78, 78, 78);
-
-}
-
-.nav::after{
-    grid-column-start: 1;
-    grid-column-end: 4;
-    content: "";
-    height: 1px;
-    width: 100%;
-    background-color: rgba(128, 128, 128, 0.37);
-    margin-top: 10px;
-}
-.bottomNav{
-    background-color: rgb(255, 255, 255);
-    width: 100%;
-    height: 60px;
-    z-index: 998;    
-    overflow: hidden;
+    justify-content: space-between;
+    margin-top: 20PX;
+  }
+  .customNavbar svg {
+    height: 30px;
+    opacity: 0.8;
+  }
+  .customNavbar img {
+    height: 40px;
+  }
+  .black {
+    /* display: none; */
+    z-index: 998;
     position: fixed;
+    bottom: 0;
+    width: 300px;
+    background-color: rgba(245, 245, 245, 0.336);
+    left: 0;
+    height: 100%;
     width: 100%;
-    display: none;
+    backdrop-filter: blur(4px);
+  }
+
+
+
+  .slide {
+    z-index: 999;
+    background-color: white;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 300px;
+    height: 100%;
+    list-style: none;
+    flex-direction: column;
+    padding-left: 20px;
+    gap: 5px;
+    overflow-y: auto;
+    color: #000000;
+  }
+  
+ .slide i{
+  border-radius: 50%;
+  padding: 5px;
+  font-size: 20px;
+  color: rgb(0, 0, 0);
+  height: 20x;
+  width: 35px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.slide .auth{
+  margin-top: 20px;
+  font-size: 20px;
+  gap: 10px;
+}
+.slide .slideNavs{
+  margin-top: 50px;
+}
+.slide .slideNavs .navs{
+  position: relative;
+  margin-top: 20PX;
+  display: flex;
+  /* align-items: center; */
+  flex-direction: column;
+}
+
+.slide .slideNavs .navs::after{
+ content: "";
+ height: 1px;
+ width: 10px;
+ background-color: #25252525;
+ position: absolute;
+ top: 140%;
+ bottom: 0;
+ width: 90%;
+ left: 0;
+}
+.slide .navWithSubNav{
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  padding-right: 20px;
+  height: 25px;
+}
+.slide .subLi{
+  display: flex;
+  gap: 20px;
+  margin-top: 20px;
+  
+}
+.slide ul img{
+  height: 20px;
+  width: 20px;
+}
+
+
+/* Social Links Inside Slider Nav */
+.slide .social{
+  margin-top: 100px;
+  display: flex;
+  flex-wrap: wrap;
+  width: 280px;
+  /* gap: 20px; */
+  /* background-color: #ff390b; */
+}
+.slide .social i{
+  font-size: 30px;
+  color: white;
+}
+.slide .social div{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  height: 60px;
+  background-color: #1a1a1a;
+  color: white;
+  margin: 2px;
+  width: 80px;
+  /* border-top: 0.51px solid #000000;
+  border-bottom: 0.51px solid #000000;
+  border-left: 0.51px solid #000000;
+  border-right: 0.51px solid #000000; */
+}
+
+
+.slide .social div:nth-child(2n){
+  transition: 0.5s;
+  background-color: #ffffff;
+}
+
+.slide .social div:nth-child(2n) i{
+  color: black;
+}
+
+/* bottom nav */
+.bottomNan {
+    z-index: 888;
+    gap: 20px;
+    display: flex;
     align-items: center;
     justify-content: space-around;
-    font-size: 30px;
-    border-radius: 2px 2px 0px 0px;
-    color: #220701;
-}
-@media screen and (max-width:704px) {
-    #leftNav{
-        display: none;
-    }
-    #rightNav{
-        display: none;
-    }
-    .nav{
-        grid-template-columns: 100%;
-    }
-    .bottomNav{
-        display: flex;
-    }
-}
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    overflow: hidden;
+    background-color: rgb(255, 255, 255);
+    width: 100%;
+    height: 75px;
+    border-top: 5px solid #000000;
 
-#navLabel{
-    font-family: "Roboto", sans-serif;
-    margin: 20px;
-    font-size: 14px;
-    font-weight: 400;
-    color: rgb(71, 71, 71);
-}
-
-
+  }
+  .bottomNan i {
+    font-size: 25px;
+  }
+  .bottomNan a{
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    font-size: 12px;
+  }
